syntax = "proto3";

message EmptyMessage{}

message NameMessage{
    string name = 1;
}

message ListFilesResponse{
    repeated string files = 1;
}

message FindFileResponse{
    bool found = 1;
}

service FilesService {
    rpc ListFiles(EmptyMessage) returns (ListFilesResponse);
}

service FindFilesService {
    rpc FindFiles(NameMessage) returns (FindFileResponse);
}